prep post view modal

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,15 @@
     <br /><br />
   </div>
 
+  <!-- Post view modal -->
+  <div id="postViewModal" style="
+  position: relative;
+  " hidden>
+
+    test lmao
+
+  </div>
+
 </body>
 
 </html>
