--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,12 @@
 
     <div style="filter: drop-shadow(2px 2px 1px rgba(0, 0, 0));">
       the alternative browsing interface
+      <br /><br />
+      <img src="assets/construction.gif" style="margin-bottom: -60px; margin-top: -10px;">
+      <br />
+      This site is a work in progress.
+      <br />
+      Major features are broken or missing.
     </div>
 
     <br /><br />
